Tree is able to build without errors. But we need to fix transitions.

--- a/webserver/src/main/resources/static/d3tree.html
+++ b/webserver/src/main/resources/static/d3tree.html
@@ -94,7 +94,8 @@
             data.splice(50, 1);
         }
         // Add a new datum to a random parent.
-        var d = {id: "ohai"+(++sfid)}, parent = data[~~(Math.random() * data.length)];
+        var d = {id: "ohai"+(++sfid)},
+            parent = data[~~(Math.random() * data.length)];
         if (parent.children) parent.children.push(d); else parent.children = [d];
         data.push(d);
 
