--- a/webserver/src/main/resources/static/d3tree.html
+++ b/webserver/src/main/resources/static/d3tree.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Node-Link Tree</title>
-    <script type="text/javascript" src="/root/webserver/static/js/d3-selection/d3-selection.js"></script>
-    <script type="text/javascript" src="/root/webserver/static/js/d3-hierarchy/d3-hierarchy.js"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js"></script>
     <style type="text/css">
 
         .node {
@@ -49,21 +49,12 @@
     var sfid = 1000;
     var w = 150,
         h = 150,
-        treeData = {"name": "Top Level" },
-        tree = d3.tree().size([w - 40, h - 40]),
-        root = d3.hierarchy(treeData, function(d) { return d.children; }),
+        root = {},
         data = [root],
-        diagonal = function diagonal(d) {
-            return "M" + d.y + "," + d.x
-                + "C" + (d.parent.y + 100) + "," + d.x
-                + " " + (d.parent.y + 100) + "," + d.parent.x
-                + " " + d.parent.y + "," + d.parent.x;
-        },
+        tree = d3.layout.tree().size([w - 40, h - 40]),
+        diagonal = d3.svg.diagonal(),
         duration = 5000,
         timer = setInterval(update, duration);
-
-    root.x0 = h / 2;
-    root.y0 = 0;
 
     function func() {
         clearInterval(timer);
@@ -82,20 +73,25 @@
         .attr("transform", "translate(10, 10)");
 
     var gNodes = vis.selectAll("g")
-        .data(tree(root), nodeId)
+        .data(tree(root))
         .enter()
-        .append(function() {
-            var g = document.createElementNS("http://www.w3.org/2000/svg", "g");
-            return g;
+        .append("g")
+        .attr("transform", function(d) {
+            return "translate(0,0)";
         });
+
+    gNodes.append("svg:rect")
+        .attr("class", "node_rect")
+        .attr("x", x)
+        .attr("y", y);
+
 
     function update() {
         if (data.length >= 100) {
             data.splice(50, 1);
         }
         // Add a new datum to a random parent.
-        var d = {id: "ohai"+(++sfid)},
-            parent = data[~~(Math.random() * data.length)];
+        var d = {id: "ohai"+(++sfid)}, parent = data[~~(Math.random() * data.length)];
         if (parent.children) parent.children.push(d); else parent.children = [d];
         data.push(d);
 
@@ -103,7 +99,7 @@
         var nodes = tree(root);
 
         // Update the nodes…
-        var updatedItems = vis.selectAll("g")
+        var updatedItems = gNodes/*.selectAll("g")*/
             .data(nodes, nodeId);
         var enteringItems = updatedItems
             .enter();
@@ -148,6 +144,8 @@
                 return "translate(" + d.x + "," + d.y + ")";
             });
 
+        updatedItems.exit().remove();
+
         // Update the links…
         var link = vis.selectAll("path.link")
             .data(tree.links(nodes), linkId);
@@ -183,5 +181,103 @@
     }
 
 </script>
+<!--<script type="text/javascript">
+    var sfid2 = 1000;
+    var w2 = 150,
+        h2 = 150,
+        root2 = {},
+        data2 = [root2],
+        tree2 = d3.layout.tree().size([w - 20, h - 20]),
+        diagonal2 = d3.svg.diagonal(),
+        duration2 = 250,
+        timer2 = setInterval(update2, duration2);
+
+    var vis2 = d3.select("#individual2").append("svg:svg")
+        .attr("width", w2)
+        .attr("height", h2)
+        .append("svg:g")
+        .attr("transform", "translate(10, 10)");
+
+    vis2.selectAll("circle")
+        .data(tree2(root2))
+        .enter().append("svg:circle")
+        .attr("class", "node")
+        .attr("r", 3.5)
+        .attr("cx", x)
+        .attr("cy", y);
+
+    function update2() {
+        if (data2.length >= 100) {
+            data2.splice(50, 1);
+        }
+        // Add a new datum to a random parent.
+        var d = {id: "ohai"+(++sfid2)}, parent = data2[~~(Math.random() * data2.length)];
+        if (parent.children) parent.children.push(d); else parent.children = [d];
+        data2.push(d);
+
+        // Compute the new tree layout. We'll stash the old layout in the data.
+        var nodes = tree2(root2);
+
+        // Update the nodes…
+        var node = vis2.selectAll("circle.node")
+            .data(nodes, nodeId);
+
+        // Enter any new nodes at the parent's previous position.
+        node.enter().append("svg:circle")
+            .attr("class", "node")
+            .attr("r", 3.5)
+            .attr("cx", function(d) { return d.parent.data.x0; })
+            .attr("cy", function(d) { return d.parent.data.y0; })
+            .transition()
+            .duration(duration2)
+            .attr("cx", x)
+            .attr("cy", y);
+
+        node.exit().remove();
+
+        // Transition nodes to their new position.
+        node.transition()
+            .duration(duration2)
+            .attr("cx", x)
+            .attr("cy", y);
+
+        // Update the links…
+        var link = vis2.selectAll("path.link")
+            .data(tree2.links(nodes), linkId);
+
+        // Enter any new links at the parent's previous position.
+        link.enter().insert("svg:path", "circle")
+            .attr("class", "link")
+            .attr("d", function(d) {
+                var o = {x: d.source.data.x0, y: d.source.data.y0};
+                return diagonal2({source: o, target: o});
+            })
+            .transition()
+            .duration(duration2)
+            .attr("d", diagonal2);
+
+        // Transition links to their new position.
+        link.transition()
+            .duration(duration2)
+            .attr("d", diagonal2);
+    }
+
+    function linkId(d) {
+        return d.source.data.id + "-" + d.target.data.id;
+    }
+
+    function nodeId(d) {
+        return d.data.id;
+    }
+
+    function x(d) {
+        return d.data.x0 = d.x;
+    }
+
+    function y(d) {
+        return d.data.y0 = d.y;
+    }
+
+</script>-->
 </body>
 </html>
