--- a/webserver/src/main/resources/static/d3treev4vert.html
+++ b/webserver/src/main/resources/static/d3treev4vert.html
@@ -77,8 +77,9 @@
                 "translate(" + margin.left + "," + margin.top + ")");
 
     // adds the links between the nodes
+    var descendants = nodes.descendants();
     var link = g.selectAll(".link")
-        .data( nodes.descendants().slice(1))
+        .data( descendants.slice(1))
         .enter().append("path")
         .attr("class", "link")
         .attr("d", function(d) {
